ajout header sans nav

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<header>
+
+  <div class="logo">
+    <img src="assets\img\Vector.png" alt="logo de bergamotte">
+    <p>Bergamotte</p>
+  </div>
+
+  <div class="nav">
+    <img src="assets\img\icon - panier.png" alt="icon panier">
+  </div>
+  
+
+</header>
