implémentation des components de la page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
 <app-header></app-header>
+
+<app-first-block></app-first-block>
+<app-bloc-main></app-bloc-main>
+<app-bloc-main2></app-bloc-main2>
+<app-bloc-main></app-bloc-main>
+<app-green-section></app-green-section>
+<app-last-block></app-last-block>
+<app-footer></app-footer>
