--- a/src/app/components/bloc-main/bloc-main.component.html
+++ b/src/app/components/bloc-main/bloc-main.component.html
@@ -1,1 +1,9 @@
-<p>bloc-main works!</p>
+<section>
+    <div class="text">
+        <h2>Plantes d'interieur</h2>
+        <app-text-and-button></app-text-and-button>
+    </div>
+    
+    <img src="assets\img\Img.png" alt="plante a gandes feuilles">
+    
+</section>
