--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,6 +6,7 @@
   </div>
 
   <div class="nav">
+    <app-nav></app-nav>
     <img src="assets\img\icon - panier.png" alt="icon panier">
   </div>
   
