--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,1 +1,6 @@
-<p>nav works!</p>
+<ul>
+    <li class="weight">Home</li>
+    <li>Produits</li>
+    <li>A propos</li>
+    <li>Contact</li>
+</ul>
